--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -100,5 +100,5 @@ jobs:
           echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> src/.env
           
           chmod +x ./docker_build.sh
-          chmod +x ./docker_run.sh          
+          chmod +x ./docker_run.sh "${{ secrets.STATUS_FILE }}"
           ./docker_run.sh
