--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -101,5 +101,5 @@ jobs:
           echo "STATUS_FILE=${{ secrets.STATUS_FILE }}" >> src/.env
           
           chmod +x ./docker_build.sh
-          chmod +x ./docker_run.sh "${{ secrets.STATUS_FILE }}"
-          ./docker_run.sh
+          chmod +x ./docker_run.sh
+          ./docker_run.sh "${{ secrets.STATUS_FILE }}"
