--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -1,7 +1,15 @@
 # syntax=docker/dockerfile:1
 
-FROM python:3.10-alpine
+FROM python:3.12-alpine
 WORKDIR /src
 COPY src .
-RUN pip install -r requirements.txt
-RUN pip install mypy flake8 pylint types-aiofiles
+RUN pip install pipenv
+RUN apk add --no-cache \
+    gcc \
+    musl-dev \
+    python3-dev \
+    libffi-dev \
+    openssl-dev \
+    cargo \
+    build-base
+RUN pipenv install --system --dev
