--- a/.github/actions/python-init/action.yml
+++ b/.github/actions/python-init/action.yml
@@ -14,12 +14,12 @@ runs:
       with:
         secrets: ${{ inputs.secrets }}
 
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.12"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f src/requirements.txt ]; then pip install -r src/requirements.txt; fi
-      shell: bash
+#    - name: Set up Python 3.12
+#      uses: actions/setup-python@v3
+#      with:
+#        python-version: "3.12"
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        if [ -f src/requirements.txt ]; then pip install -r src/requirements.txt; fi
+#      shell: bash
